[project]
name = "medium-cli"
version = "0.1.0"
description = "Terminal client for Medium.com — search, read, browse articles"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "overtimepog"}]
readme = "README.md"

dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "rich>=13.0",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
medium = "medium_cli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
